--- a/Student Project Repository/package.json
+++ b/Student Project Repository/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/storage": "^3.1.0",
     "bcrpyt": "^2.0.0",
     "bcrypt": "^3.0.6",
     "connect-mongo": "^3.0.0",
@@ -13,6 +14,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-fileupload": "^1.1.5",
     "express-session": "^1.16.2",
     "helmet": "^3.20.0",
     "http-errors": "~1.6.3",
